[tool.poetry]
name = "python_utils"
version = "0.1.0"
description = ""
authors = ["ksks2211 <rival15@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
pandas = "^2.2.3"
requests = "^2.32.3"
pyyaml = "^6.0.2"
aiohttp = "^3.10.10"
boto3 = "^1.35.92"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
python-dotenv = "^1.0.1"
pytest-asyncio = "^0.24.0"
boto3-stubs = "^1.35.98"
mypy-boto3-dynamodb = "^1.35.94"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
